--- a/src/app/cart/validate-step/validate-step.component.html
+++ b/src/app/cart/validate-step/validate-step.component.html
@@ -2,9 +2,15 @@
   <h3>{{'cart.Validate_Order'| translate}}</h3>
   <ul>
     <li *ngFor="let item of cartItems" class="cart-item">
-      <div class="cart-item-details">
-        {{ item.name }} - {{'cart.CartItems.Quantity'| translate}}: {{ item.quantity }} - {{'cart.CartItems.Weight'|
-        translate}}: {{ item.weight }} kg
+      <div class="cart-item-details" *ngIf="item.type=== 'HN'">
+        {{ item.name }} - {{'cart.CartItems.Quantity'|translate}}: {{ item.quantity }} -
+        {{'cart.CartItems.Weight'|translate}}: {{ item.weight }} g - {{'cart.CartItems.Price'|translate}}: {{
+        item.price  | currency }}
+      </div>
+
+      <div class="cart-item-details" *ngIf="item.type=== 'MT'">
+        {{ item.name }} - {{'cart.CartItems.Quantity'|translate}}: {{ item.quantity }} -
+        {{'cart.CartItems.Price'|translate}}: {{item.price  | currency }}
       </div>
     </li>
   </ul>
