--- a/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
@@ -1,7 +1,8 @@
 <section class="flex-container" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
 
     <div>
-        <h3 class="title">{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</h3>
+        <h3 class="title">{{'BenificesHerbalHoney.TitleBenifit'| translate}}</h3>
+        <p >{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</p>
         <ul class="listStyle">
             <li>{{'BenificesHerbalHoney.Benifit1'| translate}}</li>
             <li>{{'BenificesHerbalHoney.Benifit2'| translate}}</li>
