--- a/src/app/functionalities/static-text/inzerki/inzerki.component.html
+++ b/src/app/functionalities/static-text/inzerki/inzerki.component.html
@@ -3,23 +3,37 @@
     <div class="container">
         <div class="flex-container">
 
-            <div class="flex-item flex-container-col">
+            <div class="flex-item flex-container-col"
+                style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
                 <p>
-                    El colmenar más grande conocido en el mundo está en Marruecos. Tiene capacidad para más de 3500 colmenas y lo mantienen 250 apicultores. Te contamos cómo es el apiario más grande del mundo. 
+                    El colmenar más grande conocido en el mundo está en Marruecos. Tiene capacidad para más de 3500
+                    colmenas y lo mantienen 250 apicultores. Te contamos cómo es el apiario más grande del mundo.
                 </p>
                 <p>
-                    El colmenar más grande conocido en el mundo está en Marruecos. Tiene capacidad para más de 3500 colmenas y lo mantienen 250 apicultores. Te contamos cómo es el apiario más grande del mundo.
+                    El colmenar más grande conocido en el mundo está en Marruecos. Tiene capacidad para más de 3500
+                    colmenas y lo mantienen 250 apicultores. Te contamos cómo es el apiario más grande del mundo.
 
-                    Una discusión muy habitual en la apicultura es la cantidad de colonias que debe tener un colmenar. Generalmente, los apicultores no ponen más de unas cuantas decenas en el mismo lugar y todos tratan de determinar cuál es la carga apícola razonable para un territorio.
-                    
-                    Sin embargo, en una localidad del valle del Sous, en la zona central de Marruecos, se encuentra un colmenar muy especial. El lugar se llama Inzerki y allí se puede visitar el apiario más grande del mundo y, para muchos especialistas, también el más antiguo.
+                    Una discusión muy habitual en la apicultura es la cantidad de colonias que debe tener un colmenar.
+                    Generalmente, los apicultores no ponen más de unas cuantas decenas en el mismo lugar y todos tratan
+                    de determinar cuál es la carga apícola razonable para un territorio.
+
+                    Sin embargo, en una localidad del valle del Sous, en la zona central de Marruecos, se encuentra un
+                    colmenar muy especial. El lugar se llama Inzerki y allí se puede visitar el apiario más grande del
+                    mundo y, para muchos especialistas, también el más antiguo.
                 </p>
-                <p> https://apiculturaymiel.com/apicultura/el-apiario-mas-grande-del-mundo-esta-en-marruecos-y-admite-mas-de-3500-colmenas/</p>
+                <p>
+                    <!-- <a href=" -->
+                    https://apiculturaymiel.com/apicultura/el-apiario-mas-grande-del-mundo-esta-en-marruecos-y-admite-mas-de-3500-colmenas/
+                    <!-- " target="_blank" rel="noopener noreferrer"></a> -->
+                </p>
+                 
             </div>
             <div class="flex-item">
-                <!-- <div class="video-container"> -->
-                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/ozw_YhcH_r8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <!-- </div> -->
+
+                <iframe width="100%" height="200" src="https://www.youtube.com/embed/ozw_YhcH_r8" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
             </div>
 
         </div>
