--- a/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
@@ -1,6 +1,6 @@
 <section class="">
     <div class="flex-container-row">
-        <section class="flex-item newspaper-section" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+        <section class="flex-item newspaper-section" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}" style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
             <!-- <div class="flex-container"> -->
                 <div>
                     <h3 class="title">{{'BenificesHerbalHoney.Title'| translate}}</h3>
@@ -9,7 +9,7 @@
                 </div>
             <!-- </div> -->
         </section>
-        <section  class="flex-item newspaper-section">
+        <section  class="flex-item newspaper-section" style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
             <app-benefit-herbal-honey></app-benefit-herbal-honey>
         </section>
     </div>
