--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -6,7 +6,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <img src="./assets/img/pexels-umsiedlungen-928978.jpg" alt="">
                     <div class="titleCard">{{'Honey'|translate}}</div>
                     <div class="overlay"></div>
                 </div>
@@ -23,7 +23,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="./assets/img/bee-1299363_1280.png" alt="">
+                    <img src="./assets/img/pexels-chuanyu2015-209658-2231469.jpg" alt="">
                     <div class="titleCard">Pollen</div>
                     <div class="overlay"></div>
                 </div>
@@ -60,7 +60,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="./assets/img/bee-2022492_1280.webp" alt="">
+                    <img src="./assets/img/pexels-anete-lusina-5247971.jpg" alt="">
                     <div class="titleCard">{{'Material.Title'| translate}}</div>
                     <div class="overlay"></div>
                 </div>
@@ -75,6 +75,40 @@
                 </div>
             </div>
 
+            
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./assets/img/pexels-hatice-baran-153179658-24243914.jpg" alt="">
+                    <div class="titleCard">Productos Ceras</div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <p>Nombre</p>
+                    <div class="product-price">65</div>
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                            routerLink="/material"> {{'See_Our_Products'|translate}}
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./assets/img/pexels-hatice-baran-153179658-24243914.jpg" alt="">
+                    <div class="titleCard">Para Regalos</div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <p>Nombre</p>
+                    <div class="product-price">65</div>
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                            routerLink="/material"> {{'See_Our_Products'|translate}}
+                        </a>
+                    </button>
+                </div>
+            </div>
 
         </div>
     </div>
