--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -11,7 +11,7 @@
                     <div class="overlay"></div>
                 </div>
                 <div class="product-info">
-                    <p>Nombre</p>
+                    <p>{{'Honey'|translate}}</p>
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/">
