--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -3,12 +3,12 @@
     <div class="container">
         <div class="flex-container">
 
-            <div class="flex-item">
+            <div class="flex-item newspaper-section" style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
                 <p>
                     <q><span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}</q>
                 </p>
             </div>
-            <div class="flex-item">
+            <div class="flex-item newspaper-section">
                 <iframe class=""
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105885.07179715105!2d-6.939664507842876!3d33.96919139212627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda76b871f50c5c1%3A0x7ac946ed7408076b!2sRabat%2C%20Marruecos!5e0!3m2!1ses!2ses!4v1719930107154!5m2!1ses!2ses"
                     frameborder="0" allowfullscreen="" loading="lazy"
@@ -17,12 +17,7 @@
 
         </div>
     </div>
-
-    <section>
-        <app-activities></app-activities>
-    </section>
-
-    <div class="container flex-container-row">
+    <div class="container flex-container-row" style="BACKGROUND-COLOR: gold;">
         <section>
             <app-contact-us></app-contact-us>
         </section>
@@ -30,5 +25,10 @@
             <app-follow-us></app-follow-us>
         </section>
     </div>
+    <section>
+        <app-activities></app-activities>
+    </section>
+
+
 
 </section>
