--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -17,7 +17,7 @@
 
         </div>
     </div>
-    <div class="container flex-container-row" style="BACKGROUND-COLOR: gold;">
+    <div class="container flex-container-row">
         <section>
             <app-contact-us></app-contact-us>
         </section>
