--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ body {
   --accent-color: #e8e7fa;
   --shadow-color: #E8E8E8;
   --honey-color: #efa909;
+  --honey-sec-color: #fde6b1;
   --svg-color: #f2f2f2;
 
   --facebook-color: #3b5998;
@@ -121,6 +122,17 @@ q::after {
   font-weight: bold;
 }
 
+.background{
+  background-color: var(--honey-sec-color);
+  padding: 20px;
+  margin: 20px auto;
+  width: 80%;
+  max-width: 800px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 13.1); /* Soft shadow for depth */
+  line-height: 1.6; /* Increase line height for readability */
+  font-family: 'Georgia', serif;
+}
+
 
 /** #####################################################
     #  LA SECCION TEXTO INFORMATIVO                 #
@@ -128,7 +140,7 @@ q::after {
 
 .newspaper-section {
   background-color: #ffffff; /* White background for the section */
-  padding: 20px;
+  /* padding: 20px; */
   margin: 20px auto;
   width: 80%;
   max-width: 800px;
@@ -150,6 +162,8 @@ q::after {
 .newspaper-section p {
   text-align: justify;
   margin-bottom: 20px;
+  padding: 15px;
+
 }
 
 .newspaper-section::before {
@@ -561,6 +575,9 @@ section.listing a::after {
     margin: 5px 0;
     height: 200px;
     /* Ajusta la altura según sea necesario */
+  }
+  .newspaper-section{
+    padding: 2px;
   }
 }
 
