--- a/src/app/about/contact-us/contact-us.component.html
+++ b/src/app/about/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<section class="background" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <h3 class="title">{{'About.Contact_Us.Title'|translate}}</h3>
     <div class="conatainer list-contact">
         <ul class="footer-block__details-content list-unstyled">
