--- a/src/app/about/follow-us/follow-us.component.html
+++ b/src/app/about/follow-us/follow-us.component.html
@@ -1,4 +1,4 @@
-<Section class="background">
+<Section>
     <h3 class="title">{{ 'Follow_Us' | translate}}</h3>
     <div class="social-buttons">
         <a href="#" class="social-button linkedin" target="_blank" rel="noopener noreferrer">
