--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -3,7 +3,8 @@
     <div class="container">
         <div class="flex-container">
 
-            <div class="flex-item newspaper-section" style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
+            <div class="flex-item newspaper-section"
+                style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
                 <p>
                     <q><span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}</q>
                 </p>
@@ -17,13 +18,19 @@
 
         </div>
     </div>
-    <div class="container flex-container-row">
-        <section>
-            <app-contact-us></app-contact-us>
+    <div class="container flex-container">
+        <div class="flex-container">
+            <section class="background">
+                <app-contact-us></app-contact-us>
+            </section>
+            <section class="background">
+                <app-follow-us></app-follow-us>
+            </section>
+        </div>
+        <section class="flex-item">
+            <app-delivery></app-delivery>
         </section>
-        <section>
-            <app-follow-us></app-follow-us>
-        </section>
+
     </div>
     <section>
         <app-activities></app-activities>
