--- a/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
@@ -1,4 +1,5 @@
-<section class="">
+<section class="flex-container">
+
     <div class="flex-container-row">
         <section class="flex-item newspaper-section" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}" style=" background-image: url('/assets/img/pexels-neosiam-4498792.jpg');">
             <!-- <div class="flex-container"> -->
