externalizar el background image

--- a/src/app/blog/inzerki/inzerki.component.html
+++ b/src/app/blog/inzerki/inzerki.component.html
@@ -3,8 +3,7 @@
     <div class="container">
         <div class="flex-container">
 
-            <div class="flex-item flex-container-col"
-                style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
+            <div class="flex-item flex-container-col background-image">
                 <p>
                     El colmenar más grande conocido en el mundo está en Marruecos. Tiene capacidad para más de 3500
                     colmenas y lo mantienen 250 apicultores. Te contamos cómo es el apiario más grande del mundo.
