--- a/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
@@ -2,7 +2,7 @@
 
     <div>
         <h3 class="title">{{'BenificesHerbalHoney.TitleBenifit'| translate}}</h3>
-        <p >{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</p>
+        <h3 >{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</h3>
         <ul class="listStyle">
             <li>{{'BenificesHerbalHoney.Benifit1'| translate}}</li>
             <li>{{'BenificesHerbalHoney.Benifit2'| translate}}</li>
