--- a/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
@@ -10,7 +10,7 @@
                 </div>
             <!-- </div> -->
         </section>
-        <section  class="flex-item newspaper-section" style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
+        <section  class="flex-item newspaper-section background-image">
             <app-benefit-herbal-honey></app-benefit-herbal-honey>
         </section>
     </div>
