--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -3,8 +3,7 @@
     <div class="container">
         <div class="flex-container">
 
-            <div class="flex-item newspaper-section"
-                style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
+            <div class="flex-item newspaper-section background-image">
                 <p>
                     <q><span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}</q>
                 </p>
