--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,9 @@
   <div class="container" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <h1 class="title"> {{ 'Titles.Heart_Of_Nature' | translate}}</h1>
     <div class="flex-container">
-      <div class="flex-item newspaper-section" style=" background-image: url('/assets/img/pexels-lamiko-3616764.jpg');">
+      <div class="flex-item newspaper-section background-image"
+       
+       >
         <p>{{ 'Home.Parraph' | translate}}</p>
       </div>
       <div class="flex-item newspaper-section">
