--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -16,11 +16,75 @@
             <img class="listing-photo" [src]="coursHoney?.photo" alt="Exterior photo of {{coursHoney?.title}}" />
         </div>
     </div>
-    <h2 class="title"> {{'Our_Team'|translate}}</h2>
-    <section class="results">
+    <div>
+        <h2 class="title"> Datos del curso</h2>
+        <p>
+            Horarios
+            DURACIÓN: Curso de dos días.
+    
+            – Primer día de 8:30 a 20:00, pararemos al medio día para ir a comer todos juntos
+            – Segundo día: de 9:00 a 13:30
+        </p>
+        <p>
+            Precio:
+            175€. (INCLUYE LA COMIDA DEL PRIMER DÍA)
+        </p>
+    </div>
+    <div>
+        <h3>
+            Temario
+        </h3>
+        <a href="https://www.cursosapicultura.com/curso/iniciacion-a-la-apicultura/"> enlace</a>
+    </div>
+    <div>
+        <h3>Por asistir a este curso</h3>
+        <ul>
+            <li>
+                Cada alumno recibirá un manual con todos los apuntes del curso y material necesario para tomar notas.
 
-        <app-cours-team *ngFor="let staff of team" [staff]="staff"></app-cours-team>
-    </section>
+            </li>
+            <li>
+                A cada alumno se le proporcionará un completísimo repositorio de ficheros en digital: películas, manuales, imágenes, vídeos, documentos en general, relacionados con la apicultura, que hemos recopilado en estos últimos años, que le servirán para poder seguir ampliando y reforzando conocimientos y disfrutando de la apicultura.
+
+            </li>
+            <li>
+                Diploma y Certificado de presencia y aprovechamiento del curso.
+
+            </li>
+            <li>
+                Asesoría y resolución de dudas después del curso, directamente con el profesor y por un tiempo ilimitado.
+
+            </li>
+            <li>
+                Aunque nunca hemos tenido el menor problema, pero preferimos estar tranquilos así que todas las personas que asisten a nuestro curso, están cubiertos por un seguro de responsabilidad civil, para cualquier contingencia que pudiera ocurrir.
+
+            </li>
+            <li>
+                Para quien no disponga de equipo apícola, se proveerá de la indumentaria, guantes, etc. necesario para practicar en el apiario con toda seguridad.
+
+            </li>
+            <li>
+                Durante este curso, tendrás a tu entera disposición café, te, zumos,  dulces y fruta para reponer fuerzas cuando lo necesites
+            </li>
+
+        </ul>
+
+    </div>
+    <div>
+        <h3>Información importante</h3>
+        <p>Recuerda traer ropa y calzado que sea cómoda y práctica para salir al campo.
+
+            Si vienes de lejos y necesitas quedarte a dormir por la zona, te podemos ayudar con la gestión del alojamiento, con precios muy competitivos.
+            
+            El curso está formado por una parte teórica y otra práctica, en la que los alumnos podrán tener contacto con las abejas, manejar una colmena, etc., en definitiva repasar  y tocar in situ todo lo visto en la parte teórica.
+            
+            La parte práctica se hará en un apiario, situado junto al aula de formación, evitando así perdidas de tiempo en desplazamientos.
+            
+            Para garantizar la calidad y atención personalizada, todos nuestros cursos tienen plazas limitadas, por lo que es necesario reservar previamente para asegurase de la disponibilidad de plazas.</p>
+    </div>
+
+
+
     <h2 class="title"> {{'Cours.Other_Courses'|translate}}</h2>
     <section class="results">
 
