estilos del blog

--- a/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
@@ -1,8 +1,9 @@
-<section class="flex-container" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+<section class="flex-container"
+    [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
 
-    <div>
+    <div class="">
         <h3 class="title">{{'BenificesHerbalHoney.TitleBenifit'| translate}}</h3>
-        <h3 >{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</h3>
+        <h3>{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</h3>
         <ul class="listStyle">
             <li>{{'BenificesHerbalHoney.Benifit1'| translate}}</li>
             <li>{{'BenificesHerbalHoney.Benifit2'| translate}}</li>
