--- a/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.css
+++ b/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.css
@@ -1,18 +1,18 @@
 section {
-    font-family: 'Times New Roman', Times, serif;
+    /* font-family: 'Times New Roman', Times, serif; */
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0; /* Light grey background */
+    
   }
   
  
   
-  .flex-item {
+  /* .flex-item {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
+  } */
 
   @media (min-width: 768px) {
  
