--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,26 @@
 :host {
   /* --content-padding: 10px; */
   --content-padding: 10px;
+  --header-height: 75px; /* Altura del encabezado */
 }
 
 .content {
   padding: var(--content-padding);
+  padding-top: var(--header-height); /* Añade relleno superior para evitar colisión con el encabezado */
 }
 
 header {
   display: inline-flex;
-  height: 60px;
+  /* height: 60px; */
   width: 100%;
-  padding: var(--content-padding);
+  /* padding: var(--content-padding); */
   box-shadow: 0px 5px 25px var(--shadow-color);
   background-color: var(--main-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; /* Ensure the header is above other content */
+ 
 }
 
 footer {
@@ -33,7 +40,7 @@ footer section {
 
 .containerHeader {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   background: radial-gradient(circle farthest-side at 0% 50%,
       #282828 23.5%,
       rgba(255, 170, 0, 0) 0) 21px 30px,
