--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,14 @@
 :host {
   /* --content-padding: 10px; */
   --content-padding: 10px;
-  --header-height: 75px; /* Altura del encabezado */
+  --header-height: 75px;
+  /* Altura del encabezado */
 }
 
 .content {
   padding: var(--content-padding);
-  padding-top: var(--header-height); /* Añade relleno superior para evitar colisión con el encabezado */
+  padding-top: var(--header-height);
+  /* Añade relleno superior para evitar colisión con el encabezado */
 }
 
 header {
@@ -19,8 +21,9 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000; /* Ensure the header is above other content */
- 
+  z-index: 1000;
+  /* Ensure the header is above other content */
+
 }
 
 footer {
@@ -98,17 +101,6 @@ footer section {
 
 }
 
-
-/* .cart-icon {
-  position: relative;
-  cursor: pointer;
-  font-size: 24px;
-}
-
-.cart-icon .fa-shopping-cart {
-  color: var(--honey-color);
-} */
-
 .cart-count {
   position: absolute;
   top: 15px;
@@ -121,12 +113,12 @@ footer section {
   font-weight: bold;
 }
 
-.headerONE{
+.headerONE {
   flex: 1 1 auto;
   padding: 15px;
 }
 
-.headerFor{
+.headerFor {
   display: flex;
   align-items: end;
   justify-content: end;
@@ -135,7 +127,7 @@ footer section {
 
 }
 
-.headerThree{
+.headerThree {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -143,7 +135,7 @@ footer section {
   padding: 15px;
   width: 100%;
   height: 100%;
- 
+
 }
 
 
