--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -1,94 +1,214 @@
-<article [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-    <div class="flex-container">
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+
+    <section class="flex-container">
         <div class="flex-container-col">
             <section class="listing-description">
                 <h2 class="listing-heading">{{coursHoney?.title}}</h2>
+                <h5 class="title"> Datos del curso</h5>
                 <p class="listing-location">{{coursHoney?.ubication}}</p>
-                <p class="">{{'Price'|translate}}: {{coursHoney?.price | currency }}</p>
+                <p class="">{{'Price'|translate}}: {{coursHoney?.price | currency }}, (INCLUYE LA COMIDA DEL PRIMER DÍA)
+                </p>
 
                 <ul>
                     <li>{{'Location'|translate}}: {{coursHoney?.state}}</li>
-                    <li>{{'Duration'|translate}}: {{coursHoney?.duration}}</li>
+                    <li>{{'Duration'|translate}}: {{coursHoney?.duration}}: Curso de dos días
+                        <ul>
+                            <li>Primer día de 8:30 a 20:00, pararemos al medio día para ir a comer todos juntos</li>
+                            <li>Segundo día: de 9:00 a 13:30</li>
+                        </ul>
+                    </li>
                 </ul>
+                <p>Fechas: 6 y 7 de Julio</p>
             </section>
         </div>
         <div>
             <img class="listing-photo" [src]="coursHoney?.photo" alt="Exterior photo of {{coursHoney?.title}}" />
         </div>
-    </div>
-    <div>
-        <h2 class="title"> Datos del curso</h2>
-        <p>
-            Horarios
-            DURACIÓN: Curso de dos días.
-    
-            – Primer día de 8:30 a 20:00, pararemos al medio día para ir a comer todos juntos
-            – Segundo día: de 9:00 a 13:30
-        </p>
-        <p>
-            Precio:
-            175€. (INCLUYE LA COMIDA DEL PRIMER DÍA)
-        </p>
-    </div>
-    <div>
-        <h3>
-            Temario
-        </h3>
-        <a href="https://www.cursosapicultura.com/curso/iniciacion-a-la-apicultura/"> enlace</a>
-    </div>
-    <div>
-        <h3>Por asistir a este curso</h3>
-        <ul>
-            <li>
-                Cada alumno recibirá un manual con todos los apuntes del curso y material necesario para tomar notas.
-
-            </li>
-            <li>
-                A cada alumno se le proporcionará un completísimo repositorio de ficheros en digital: películas, manuales, imágenes, vídeos, documentos en general, relacionados con la apicultura, que hemos recopilado en estos últimos años, que le servirán para poder seguir ampliando y reforzando conocimientos y disfrutando de la apicultura.
-
-            </li>
-            <li>
-                Diploma y Certificado de presencia y aprovechamiento del curso.
-
-            </li>
-            <li>
-                Asesoría y resolución de dudas después del curso, directamente con el profesor y por un tiempo ilimitado.
-
-            </li>
-            <li>
-                Aunque nunca hemos tenido el menor problema, pero preferimos estar tranquilos así que todas las personas que asisten a nuestro curso, están cubiertos por un seguro de responsabilidad civil, para cualquier contingencia que pudiera ocurrir.
-
-            </li>
-            <li>
-                Para quien no disponga de equipo apícola, se proveerá de la indumentaria, guantes, etc. necesario para practicar en el apiario con toda seguridad.
-
-            </li>
-            <li>
-                Durante este curso, tendrás a tu entera disposición café, te, zumos,  dulces y fruta para reponer fuerzas cuando lo necesites
-            </li>
-
-        </ul>
-
-    </div>
-    <div>
-        <h3>Información importante</h3>
-        <p>Recuerda traer ropa y calzado que sea cómoda y práctica para salir al campo.
-
-            Si vienes de lejos y necesitas quedarte a dormir por la zona, te podemos ayudar con la gestión del alojamiento, con precios muy competitivos.
-            
-            El curso está formado por una parte teórica y otra práctica, en la que los alumnos podrán tener contacto con las abejas, manejar una colmena, etc., en definitiva repasar  y tocar in situ todo lo visto en la parte teórica.
-            
-            La parte práctica se hará en un apiario, situado junto al aula de formación, evitando así perdidas de tiempo en desplazamientos.
-            
-            Para garantizar la calidad y atención personalizada, todos nuestros cursos tienen plazas limitadas, por lo que es necesario reservar previamente para asegurase de la disponibilidad de plazas.</p>
-    </div>
-
-
-
-    <h2 class="title"> {{'Cours.Other_Courses'|translate}}</h2>
-    <section class="results">
-
-        <app-courses-honey *ngFor="let coursHoney of coursesHoneyList" [coursHoney]="coursHoney"></app-courses-honey>
     </section>
 
-</article>
+    <section class="flex-container">
+        <div class="flex-item right-block">
+            <div class="content-wrapper">
+                <div>
+                    <div class="flex-container-row">
+                        
+                            <div class="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)"
+                                        fill="none" stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                                </svg>
+                            </div>
+                        
+                        <h2 class="title">Por asistir a este curso</h2>
+                    </div>
+                    <ul>
+                        <li>Cada alumno recibirá un manual...</li>
+                        <li>A cada alumno se le proporcionará un completísimo repositorio...</li>
+                        <li>Diploma y Certificado de presencia y aprovechamiento del curso...</li>
+                        <li>Asesoría y resolución de dudas después del curso...</li>
+                        <li>Seguro de responsabilidad civil...</li>
+                        <li>Indumentaria necesaria para practicar en el apiario...</li>
+                        <li>Café, té, zumos, dulces y fruta para reponer fuerzas...</li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="flex-container-row">
+                        
+                            <div class="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)"
+                                        fill="none" stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                                </svg>
+                            </div>
+                        
+                        <h2 class="title">Información importante</h2>
+                    </div>
+                    <p>Recuerda traer ropa y calzado que sea cómoda y práctica para salir al campo.</p>
+                    <p>Si vienes de lejos y necesitas quedarte a dormir por la zona, te podemos ayudar con la gestión
+                        del alojamiento, con precios muy competitivos.</p>
+                    <p>El curso está formado por una parte teórica y otra práctica, en la que los alumnos podrán tener
+                        contacto con las abejas, manejar una colmena, etc., en definitiva repasar y tocar in situ todo
+                        lo visto en la parte teórica.</p>
+                    <p>La parte práctica se hará en un apiario, situado junto al aula de formación, evitando así
+                        perdidas de tiempo en desplazamientos.</p>
+                    <p>Para garantizar la calidad y atención personalizada, todos nuestros cursos tienen plazas
+                        limitadas, por lo que es necesario reservar previamente para asegurase de la disponibilidad de
+                        plazas.</p>
+                </div>
+                <div>
+                    <div class="flex-container-row">
+                        
+                            <div class="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)"
+                                        fill="none" stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                                </svg>
+                            </div>
+                       
+                        <h2>Por asistir a este curso</h2>
+                    </div>
+                    <ul>
+                        <li>Cada alumno recibirá un manual...</li>
+                        <li>A cada alumno se le proporcionará un completísimo repositorio...</li>
+                        <li>Diploma y Certificado de presencia y aprovechamiento del curso...</li>
+                        <li>Asesoría y resolución de dudas después del curso...</li>
+                        <li>Seguro de responsabilidad civil...</li>
+                        <li>Indumentaria necesaria para practicar en el apiario...</li>
+                        <li>Café, té, zumos, dulces y fruta para reponer fuerzas...</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="flex-item left-block">
+            <div class="content-wrapper">
+                <div class="flex-container-row">
+                    
+                        <div class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                                <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                                    stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                            </svg>
+                        </div>
+                    
+                    <h2 class="title">Temario</h2>
+                </div>
+                <p><strong>INTRODUCCIÓN A LA APICULTURA</strong></p>
+                <p>Conceptos básicos de apicultura<br>
+                    Apicultura fijista y movilista<br>
+                    Apicultura sedentaria y trashumante
+                </p>
+
+                <div class="additional-content" [class.show]="showMore">
+                    <p><strong>Modulo 2</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                    <p><strong>Modulo 3</strong></p>
+                    <p> Tema 1<br>
+                        Tema 2<br>
+                        Tema 3
+                    </p>
+                </div>
+                <button class="toggle-button" (click)="toggleContent()">
+                    {{ showMore ? 'Mostrar menos' : 'Mostrar más' }}
+                </button>
+            </div>
+        </div>
+
+    </section>
+
+    <section>
+        <h2 class="title"> {{'Cours.Other_Courses'|translate}}</h2>
+        <section class="results">
+            <app-courses-honey *ngFor="let coursHoney of coursesHoneyList"
+                [coursHoney]="coursHoney"></app-courses-honey>
+        </section>
+    </section>
+
+</section>
